[tool.poetry]
name = "TLE"
version = "0.1.0"
description = ""
authors = ["meooow25 <soumiksarkar.3120@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.0"
seaborn = "^0.10.1"
lxml = "^4.3"
aiocache = "^0.11.1"
firebase-admin = "^5.0.0"
recordtype = "^1.3"
requests = "^2.25.1"
pytz = "^2021.1"
topggpy = "^1.4.0"
disnake = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
